--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,123 +3,99 @@ version: '3.8'
 
 # services 섹션은 실행할 개별 서비스를 정의합니다.
 services:
-  # 첫 번째 Zookeeper 인스턴스를 정의합니다.
-  my-zookeeper-1:
-    image: confluentinc/cp-zookeeper:7.0.1
-    hostname: my-zookeeper-1
-    ports:
-      - "2181:2181"
+  # 첫 번째 Zookeeper 서비스를 정의합니다.
+  zookeeper-1:
+    # 사용할 Docker 이미지와 태그를 지정합니다. 최신 버전의 confluentinc/cp-zookeeper 이미지를 사용합니다.
+    image: confluentinc/cp-zookeeper:latest
+    # 환경 변수를 설정하여 Zookeeper 인스턴스를 구성합니다.
     environment:
-      ZOOKEEPER_SERVER_ID: 1
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-      ZOOKEEPER_INIT_LIMIT: 20
-      ZOOKEEPER_SYNC_LIMIT: 5
-      ZOOKEEPER_electionPortBindRetry: 20
-      ZOOKEEPER_SERVERS: |
-        server.2=my-zookeeper-2:2888:3888
-        server.3=my-zookeeper-3:2888:3888
-        server.1=my-zookeeper-1:2888:3888
-
-  # 두 번째 Zookeeper 인스턴스를 정의합니다.
-  my-zookeeper-2:
-    image: confluentinc/cp-zookeeper:7.0.1
-    hostname: my-zookeeper-2
+      ZOOKEEPER_SERVER_ID: 1 # Zookeeper 서버의 ID를 설정합니다.
+      ZOOKEEPER_CLIENT_PORT: 2181 # 클라이언트가 연결할 포트를 지정합니다.
+      # Zookeeper의 Heartbeat 주기 등의 시간을 밀리초 단위로 설정합니다.
+      ZOOKEEPER_TICK_TIME: 2000 # Zookeeper 틱 타임을 밀리초 단위로 설정합니다.
+      # ZOOKEEPER_INIT_LIMIT: 5일 때, Zookeeper 서버가 초기화하는 동안 팔로워(follower)와 리더(leader) 간의 초기 동기화를 완료하는 데 허용되는 틱(tick) 수를 정의합니다. 5 * 2000 밀리초 = 10000 밀리초(10초)
+      ZOOKEEPER_INIT_LIMIT: 5 # 이걸 설정 안하면 Zookeeper 서버가 올라오다가 떨어지는 경우가 있습니다.
+      # ZOOKEEPER_SYNC_LIMIT: 2일 때, 팔로워가 리더와의 동기화를 완료하는 데 걸릴 수 있는 최대 시간은 2 * 2000 밀리초 = 4000 밀리초(4초)
+      ZOOKEEPER_SYNC_LIMIT: 2 # 팔로워가 리더와의 동기화를 완료할 때까지의 최대 시간을 설정합니다.
+    # 호스트와 컨테이너 간의 포트 매핑을 설정합니다.
     ports:
-      - "2182:2181"
+      - "22181:2181" # 호스트의 포트 22181을 컨테이너의 포트 2181에 매핑합니다.
+
+  # 두 번째 Zookeeper 서비스를 정의합니다.
+  zookeeper-2:
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_SERVER_ID: 2
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-      ZOOKEEPER_INIT_LIMIT: 20
-      ZOOKEEPER_SYNC_LIMIT: 5
-      ZOOKEEPER_electionPortBindRetry: 20
-      ZOOKEEPER_SERVERS: |
-        server.1=my-zookeeper-1:2888:3888
-        server.2=my-zookeeper-2:2888:3888
-        server.3=my-zookeeper-3:2888:3888
-
-  # 세 번째 Zookeeper 인스턴스를 정의합니다.
-  my-zookeeper-3:
-    image: confluentinc/cp-zookeeper:7.0.1
-    hostname: my-zookeeper-3
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
     ports:
-      - "2183:2181"
+      - "32181:2181"
+
+  # 세 번째 Zookeeper 서비스를 정의합니다.
+  zookeeper-3:
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_SERVER_ID: 3
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-      ZOOKEEPER_INIT_LIMIT: 20
-      ZOOKEEPER_SYNC_LIMIT: 5
-      ZOOKEEPER_electionPortBindRetry: 20
-      ZOOKEEPER_SERVERS: |
-        server.1=my-zookeeper-1:2888:3888
-        server.2=my-zookeeper-2:2888:3888
-        server.3=my-zookeeper-3:2888:3888
-
-
-  # 첫 번째 Kafka 브로커를 정의합니다.
-  kafka-broker-1:
-    # 사용할 도커 이미지와 버전을 명시합니다. 여기서는 confluentinc/cp-kafka 이미지의 최신 버전을 사용합니다.
-    image: confluentinc/cp-kafka:7.0.1
-    # 호스트 이름을 설정합니다.
-    hostname: kafka-broker-1
-    # 호스트와 컨테이너 간의 포트 매핑을 설정합니다. 여기서는 호스트의 9092 포트를 컨테이너의 9092 포트에 매핑합니다.
+      ZOOKEEPER_INIT_LIMIT: 5
+      ZOOKEEPER_SYNC_LIMIT: 2
     ports:
-      - "9092:9092"
-    # 컨테이너의 환경 변수를 설정합니다.
-    environment:
-      # Kafka 브로커의 고유 ID를 설정합니다.
-      KAFKA_BROKER_ID: 1
-      # Kafka 브로커가 연결할 Zookeeper 서버 목록을 설정합니다.
-      KAFKA_ZOOKEEPER_CONNECT: my-zookeeper-1:2181,my-zookeeper-2:2181,my-zookeeper-3:2181
-      # Kafka 브로커의 광고된 리스너 주소를 설정합니다.
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-1:9092
-      # Kafka 브로커의 리스너 주소를 설정합니다.
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      # 오프셋 토픽의 복제 인자 수를 설정합니다. 복제 인자가 3인 이유는 데이터의 안정성과 가용성을 높이기 위함입니다.
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    # 의존성을 설정하여 Zookeeper가 먼저 시작되도록 합니다.
+      - "42181:2181"
+
+  # 첫 번째 Kafka 브로커 서비스를 정의합니다.
+  kafka-1:
+    image: confluentinc/cp-kafka:latest
+    # Kafka 브로커가 시작되기 전에 의존하는 Zookeeper 서비스를 정의합니다.
     depends_on:
-      - my-zookeeper-1
-      - my-zookeeper-2
-      - my-zookeeper-3
-
-  # 두 번째 Kafka 브로커를 정의합니다.
-  kafka-broker-2:
-    image: confluentinc/cp-kafka:7.0.1
-    hostname: kafka-broker-2
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
     ports:
-      - "9093:9092"
+      - 29092:29092 # 호스트의 포트 29092를 컨테이너의 포트 29092에 매핑합니다.
+    environment:
+      KAFKA_BROKER_ID: 1 # Kafka 브로커의 ID를 설정합니다.
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181 # Zookeeper 연결 정보를 설정합니다.
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:9092,PLAINTEXT_HOST://localhost:29092 # 브로커의 리스너 정보를 설정합니다.
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT # 리스너 보안 프로토콜 맵을 설정합니다.
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT # 브로커 간 통신에 사용할 리스너 이름을 설정합니다.
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1 # 트랜잭션 상태 로그 복제 계수를 설정합니다.
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1 # 트랜잭션 상태 로그 최소 ISR(동기화된 복제본)의 수를 설정합니다.
+
+  # 두 번째 Kafka 브로커 서비스를 정의합니다.
+  kafka-2:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
+    ports:
+      - "39092:39092"
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: my-zookeeper-1:2181,my-zookeeper-2:2181,my-zookeeper-3:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-2:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    depends_on:
-      - my-zookeeper-1
-      - my-zookeeper-2
-      - my-zookeeper-3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-2:9092,PLAINTEXT_HOST://localhost:39092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
 
-  # 세 번째 Kafka 브로커를 정의합니다.
-  kafka-broker-3:
-    image: confluentinc/cp-kafka:7.0.1
-    hostname: kafka-broker-3
+  # 세 번째 Kafka 브로커 서비스를 정의합니다.
+  kafka-3:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper-1
+      - zookeeper-2
+      - zookeeper-3
     ports:
-      - "9094:9092"
+      - "49092:49092"
     environment:
       KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: my-zookeeper-1:2181,my-zookeeper-2:2181,my-zookeeper-3:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-3:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    depends_on:
-      - my-zookeeper-1
-      - my-zookeeper-2
-      - my-zookeeper-3
-
-# 네트워크 설정을 정의해, 모든 서비스가 동일한 네트워크를 공유하도록 합니다.
-networks:
-  default:
-    name: kafka-network
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2181,zookeeper-2:2181,zookeeper-3:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-3:9092,PLAINTEXT_HOST://localhost:49092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
