--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 spring:
   kafka:
-    bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+    bootstrap-servers: localhost:29092,localhost:39093,localhost:49094
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       auto-offset-reset: latest
+      properties:
+        heartbeat.interval.ms: 1000  # heartbeat 간격을 1초로 설정
+        session.timeout.ms: 15000    # session timeout을 15초로 설정
+        max.poll.interval.ms: 300000 # 최대 poll 간격을 5분으로 설정
     listener:
       poll-timeout: 3000
       ack-mode: RECORD
@@ -31,6 +35,8 @@ spring:
 logging:
   level:
     org:
+      apache:
+        kafka: INFO
       hibernate:
         SQL: DEBUG
       orm:
