--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
     mavenCentral()
 }
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.kafka:spring-kafka'
     compileOnly 'org.projectlombok:lombok'
